# scRNA-seq-nextflow

./: CHANGELOG.md  Dockerfile  README.md  cat_fastq.nf  cat_trim_fastq.nf  entrypoint.sh  gene_coverage.nf  main.nf  multiqc.nf  nextflow.config  present_version.nf  report.nf  scRNAseq_env.yml  sequencing_saturation.nf  star.nf  starsolo.nf  trim_fastq.nf
.github/workflows/: docker-image.yml
lib/rust/summarize_bc_q30/: Cargo.toml
lib/rust/summarize_bc_q30/src/: main.rs
modules/nf-core/modules/qualimap/rnaseq/: main.nf
vdj/: cat_trim_fastq_vdj.nf  present_version_vdj.nf  qualimap_vdj.nf  report_vdj.nf  sequencing_saturation_vdj.nf  starsolo_vdj.nf  trust4_vdj.nf
